--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,28 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#d017ba",
-        "activityBar.background": "#d017ba",
-        "activityBar.foreground": "#e7e7e7",
-        "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#b4c916",
+        "activityBar.activeBackground": "#c96397",
+        "activityBar.background": "#c96397",
+        "activityBar.foreground": "#15202b",
+        "activityBar.inactiveForeground": "#15202b99",
+        "activityBarBadge.background": "#a0ce71",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#e7e7e799",
-        "editorGroup.border": "#d017ba",
-        "panel.border": "#d017ba",
-        "sash.hoverBorder": "#d017ba",
-        "sideBar.border": "#d017ba",
-        "statusBar.background": "#a21291",
-        "statusBar.border": "#a21291",
+        "editorGroup.border": "#c96397",
+        "panel.border": "#c96397",
+        "sash.hoverBorder": "#c96397",
+        "sideBar.border": "#c96397",
+        "statusBar.background": "#b9407e",
+        "statusBar.border": "#b9407e",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#d017ba",
-        "statusBarItem.remoteBackground": "#a21291",
+        "statusBarItem.hoverBackground": "#c96397",
+        "statusBarItem.remoteBackground": "#b9407e",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "tab.activeBorder": "#d017ba",
-        "titleBar.activeBackground": "#a21291",
+        "tab.activeBorder": "#c96397",
+        "titleBar.activeBackground": "#b9407e",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.border": "#a21291",
-        "titleBar.inactiveBackground": "#a2129199",
+        "titleBar.border": "#b9407e",
+        "titleBar.inactiveBackground": "#b9407e99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#a21291"
+    "peacock.remoteColor": "#b9407e"
 }
