--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,28 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#c96397",
-        "activityBar.background": "#c96397",
+        "activityBar.activeBackground": "#e69a54",
+        "activityBar.background": "#e69a54",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#a0ce71",
+        "activityBarBadge.background": "#e3fbef",
         "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#e7e7e799",
-        "editorGroup.border": "#c96397",
-        "panel.border": "#c96397",
-        "sash.hoverBorder": "#c96397",
-        "sideBar.border": "#c96397",
-        "statusBar.background": "#b9407e",
-        "statusBar.border": "#b9407e",
-        "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#c96397",
-        "statusBarItem.remoteBackground": "#b9407e",
-        "statusBarItem.remoteForeground": "#e7e7e7",
-        "tab.activeBorder": "#c96397",
-        "titleBar.activeBackground": "#b9407e",
-        "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.border": "#b9407e",
-        "titleBar.inactiveBackground": "#b9407e99",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "commandCenter.border": "#15202b99",
+        "editorGroup.border": "#e69a54",
+        "panel.border": "#e69a54",
+        "sash.hoverBorder": "#e69a54",
+        "sideBar.border": "#e69a54",
+        "statusBar.background": "#e08027",
+        "statusBar.border": "#e08027",
+        "statusBar.foreground": "#15202b",
+        "statusBarItem.hoverBackground": "#b9671b",
+        "statusBarItem.remoteBackground": "#e08027",
+        "statusBarItem.remoteForeground": "#15202b",
+        "tab.activeBorder": "#e69a54",
+        "titleBar.activeBackground": "#e08027",
+        "titleBar.activeForeground": "#15202b",
+        "titleBar.border": "#e08027",
+        "titleBar.inactiveBackground": "#e0802799",
+        "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.remoteColor": "#b9407e"
+    "peacock.remoteColor": "#e08027"
 }
