most recent api

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,28 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#e69a54",
-        "activityBar.background": "#e69a54",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#e3fbef",
+        "activityBar.activeBackground": "#944f59",
+        "activityBar.background": "#944f59",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#64a659",
         "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "editorGroup.border": "#e69a54",
-        "panel.border": "#e69a54",
-        "sash.hoverBorder": "#e69a54",
-        "sideBar.border": "#e69a54",
-        "statusBar.background": "#e08027",
-        "statusBar.border": "#e08027",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#b9671b",
-        "statusBarItem.remoteBackground": "#e08027",
-        "statusBarItem.remoteForeground": "#15202b",
-        "tab.activeBorder": "#e69a54",
-        "titleBar.activeBackground": "#e08027",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.border": "#e08027",
-        "titleBar.inactiveBackground": "#e0802799",
-        "titleBar.inactiveForeground": "#15202b99"
+        "commandCenter.border": "#e7e7e799",
+        "editorGroup.border": "#944f59",
+        "panel.border": "#944f59",
+        "sash.hoverBorder": "#944f59",
+        "sideBar.border": "#944f59",
+        "statusBar.background": "#733d45",
+        "statusBar.border": "#733d45",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#944f59",
+        "statusBarItem.remoteBackground": "#733d45",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "tab.activeBorder": "#944f59",
+        "titleBar.activeBackground": "#733d45",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.border": "#733d45",
+        "titleBar.inactiveBackground": "#733d4599",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#e08027"
+    "peacock.remoteColor": "#733d45"
 }
